Connect Grades landing page to Gradesheets view, Fix z-index for nav-menu when opening/closing (#8)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -86,6 +86,7 @@
   padding: 0.5em 1em 1em 1em;
   transition: 850ms;
   visibility: hidden;
+  z-index: 1;
 }
 
 .nav-menu.active {
@@ -189,4 +190,15 @@ a .nav-tab:hover,
   color: white;
   width: 28px;
   height: 28px;
+}
+
+/* -----Grades-------- */
+.Grades .card-group,
+.Grades .card {
+  padding: 1em;
+  flex-flow: column wrap;
+}
+
+.cardgroup-title {
+  width: 100%;
 }
